# hand_tracking

./: .gitignore  DLC_training_Yiting.ipynb  README.md  annotation_prep.ipynb  hand_conf_pca.ipynb  hand_conf_tsne.ipynb  hand_config_analysis.ipynb  hand_direction.ipynb  litpose_vis.ipynb  ltgpose_prep.ipynb  processing_pipeline (copy).ipynb  processing_pipeline.ipynb  pyproject.toml
Anipose/: Anipose_calibration.ipynb  Anipose_label_combined.ipynb  Anipose_pipeline.ipynb  Anipose_triangulation.ipynb  Anipose_visualization.ipynb  Aniposelib_camera_calibration.ipynb  Aniposelib_triangulation.ipynb  LP2Anipose.ipynb  README.md  config_2cam.toml  data.h5
Anipose_pipeline/: Anipose_pipeline.ipynb  Anipose_video_prep.ipynb  Aniposelib_camera_calibration.ipynb  LP2Anipose.ipynb  README.md  calibration.toml
DANNCE/: DataPrep.ipynb  Jarvis2Dannce.m  README.md  readCVyaml.m
JARVIS/: 3D_visualization.ipynb  Create2DVideos_confThresh.ipynb  Image2Video.ipynb  Jarvis2LP-fusedFrames.ipynb  Jarvis2LP-multiview.ipynb  Jarvis2LP.ipynb  Jarvis2Ncams_cal.ipynb  README.md  Select_Key_Points.ipynb  Update_Jarvis_annotation.ipynb
Lightning-Pose/: Check_VideoFormat.ipynb  FuseFrames.ipynb  Get_ContextFrames.ipynb  README.md  Visualization_inference.ipynb  Visualization_model_evaluation.ipynb  Visualization_model_training.ipynb  compression_comparison.ipynb  config_hand-2cam-fused.yaml
MyoSuite/: test.ipynb
NCams/: Camera_calibration_pipeline.ipynb  Creat_checkerboard.ipynb  PrepareNCamsConfig.ipynb  Triangulation_and_Plotting.ipynb
Rockfish/: README.md
anipose_yt/: filter_3d.py  (+2 more)
(+114 files in other folders)
